# InferMatrixCopilot

./: .env.template  .gitattributes  .gitignore  .gitmodules  AGENTS.md  MCP_PR_REVIEW_EVALUATION.md  QUICKSTART.md  README.md  install.sh  pyproject.toml  run_test_cleanroom.sh
.claude-plugin/: marketplace.json
adapters/vllm_omni/: NOTICE.md  manifest.yaml
doc/: CODE_TOUR.md  DESIGN.md  DOCSTRING_STYLE.md  EVAL-PR20-report.md  EVAL-goal-report.md  EXTENDING-KNOWLEDGE.md  IMPLEMENTATION_STATUS.md  KNOWLEDGE.md  MCP.md  PLAN-knowledge-reorg.md  PLAN-mcp-plugin-and-community-merge.md  RESEARCH-reference-agents.md  RFC-auto-run.md
doc/SPEC/: 00-architecture.md  01-constraints.md  02-task-and-cli.md  03-planning.md  04-engine.md  05-steps.md  06-profiles.md  07-edge.md  08-crosscut.md  README.md  _ARCHITECTURE.md  _CONCISION.md  _CONSTRAINTS.md  agent_loop.md  chat.md  cli.md  config.md  intent.md  llm.md  metrics.md  notify.md  push.md  run_trace.md  scopes.md  task_spec.md  tools.md  ui.md
doc/knowledge-templates/: README.md  _index.md  architecture-component.md  architecture-model.md  guide.md  incident.md  repo-index.md  rules.md
docs/codex/: config.toml
eval/: ANALYSIS.md  METRICS_RESEARCH.md  METRIC_V2.md  METRIC_V3.md  README.md  RESULTS.md  RESULTS_V2.md  RESULTS_V3.md  rejudge_archived.sh  run_eval.py  run_eval_v2.py  run_eval_v3.py  run_replicates.sh  score_replicates.py
knowledge/: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SCHEMA.md
playbooks/: issue-assist.yaml  issue-triage.yaml  pr-debug.yaml  pr-rebase.yaml  pr-review.yaml  profile-consolidate.yaml  repo-profile.yaml  repo-rebase-native.yaml  repo-rebase.yaml
plugin/: .mcp.json
skills/: README.md
test/: conftest.py  test_adapters.py  test_agent_ensemble.py  test_agent_loop.py  test_agent_runtime.py  test_campaign_tooling.py  test_capabilities.py  test_cc_review.py  test_chat.py  test_ci_and_repo_map.py  test_cli.py  test_dual_path.py  test_engine.py  test_intent_taskspec.py  test_knowledge_source.py  test_mcp.py  test_memory.py  test_metrics.py  test_moa.py  test_p3_machinery.py  test_phase_b.py  test_planner_playbooks.py  test_plugins.py  test_pr_steps.py  test_profile_steps.py  test_profile_store.py  test_push_and_steps.py  test_quality_workstreams.py  test_rebase_monitor.py  test_rebase_native.py  test_review.py  test_review_planner.py  test_review_step.py  test_routing.py  test_scopes_tools.py  test_skills_scope.py  test_tier_split.py  test_tracing.py  test_ui.py  test_v2_p0.py
(+2850 files in other folders)
