[project]
name = "infermatrix-copilot"
version = "0.1.0"
description = "InferMatrixCopilot — playbook-driven repo-maintenance agent (engine substrate, targets, adapters, conversational CLI)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "anthropic>=0.34",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# MCP server (Claude Code / Codex integration) — kept optional so a standalone
# CLI install stays dependency-free.
mcp = ["mcp>=1.2"]

[project.scripts]
infermatrix-copilot = "infermatrix_copilot.cli:main"
infermatrix-copilot-mcp = "infermatrix_copilot.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-q"
